# eip712-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  example.eip712.json  mise.example.toml  mise.toml
.github/workflows/: release.yml
docs/: ledger.md  turnkey.md
scripts/: update-formula.sh
src/: cli.rs  commands.rs  main.rs  output.rs  schema.rs
src/output/: legacy.rs  table.rs
src/signer/: ledger.rs  mod.rs
src/signer/ledger/: types.rs
