[package]
name = "eip712"
version = "1.0.0"
edition = "2024"
authors = ["Maxim Fischuk"]

[dependencies]
# Cli
clap = "4.5.60"

# Error handling
eyre = "0.6.12"

# Web3
alloy = { version = "1.7.3", features = [
    "eip712",
    "signer-ledger",
    "signer-mnemonic",
    "signer-yubihsm",
    "signer-aws",
    "signer-gcp",
    "signer-trezor",
    "signer-turnkey",
] }

# Data
serde = "1.0.228"
serde_json = "1.0.149"
jsonschema = "0.44.0"

# Runtime
tokio = { version = "1.50.0", features = ["full"] }

# Pretty output
comfy-table = "7.2.2"
colored = "3.1.1"
